Integrated encryption